--- a/deluge-web.service
+++ b/deluge-web.service
@@ -4,7 +4,7 @@ After=deluged.service
 
 [Service]
 User=deluge
-ExecStart=/usr/bin/deluge-web
+ExecStart=/usr/bin/deluge-web -d
 
 [Install]
 WantedBy=multi-user.target
