--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 protobuf==3.1.0
-Twisted==16.6.0
+Twisted==17.5.0
 txrudp==0.5.1
 pystun==0.1.0
 bitcointools==1.1.44
-gnupg==2.2.0
-pynacl==1.0.1
+gnupg==2.3.0
+pynacl==1.1.2
 txrestapi==0.2
 txws==0.9.1
 python-libbitcoinclient==0.4.3
 python-bitcoinlib==0.7.0
-pyopenssl==16.2.0
+pyopenssl==17.1.0
 miniupnpc
-bleach==1.5.0
-html5lib==0.9999999
-service_identity==16.0.0
-certifi==2016.9.26
+bleach==2.0.0
+html5lib
+service_identity==17.0.0
+certifi==2017.4.17
+requests
