--- a/tmpfiles.conf
+++ b/tmpfiles.conf
@@ -1,2 +1,2 @@
-d /run/xen 0755 root root -
-d /run/xenstored 0755 root root -
+d /var/run/xen 0755 root root -
+d /var/run/xenstored 0755 root root -
