--- a/mblock.desktop
+++ b/mblock.desktop
@@ -1,8 +1,7 @@
 [Desktop Entry]
 Name=mBlock
 Comment=mblock 4.0
-Exec=/opt/mBlock/mblock
-Icon=/usr/share/icons/mBlock/48x48.png
+Exec=/opt/mblock/mblock
+Icon=/usr/share/icons/mblock/48x48.png
 Terminal=false
 Type=Application
-Name[he_IL]=mblock.desktop
