--- a/visual-studio-code-git.desktop
+++ b/visual-studio-code-git.desktop
@@ -1,7 +1,9 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Visual Studio Code (Open Source)
-Exec="/opt/VSCode-OSS/code-oss" %F
-Icon=/opt/VSCode-OSS/resources/app/resources/linux/code.png
+Comment=Source code editor and debugger for modern web and cloud applications
+Version=1.0
+Exec="/usr/bin/code-oss" %F
+Icon=/usr/share/code-oss/resources/app/resources/linux/code.png
 Type=Application
 Categories=Development;
