--- a/rocketchat.service
+++ b/rocketchat.service
@@ -1,13 +1,17 @@
 [Unit]
-Description=Rocket.Chat server
+Description=RocketChat server
 
 [Service]
-ExecStart=/usr/bin/rocketchat-server.sh
+ExecStartPre=/bin/sh -c '/usr/bin/node --version > /usr/share/rocketchat-server/.node_version.txt'
+ExecStart=/usr/bin/node /usr/share/rocketchat-server/main.js
+Restart=always
+RestartSec=10
 StandardOutput=syslog
 StandardError=syslog
 SyslogIdentifier=rocketchat
 User=rocketchat
 Group=rocketchat
+EnvironmentFile=/etc/rocketchat/rocketchat-server.conf
 
 [Install]
 WantedBy=multi-user.target
