--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.4.11-1 Kernel Configuration
+# Linux/x86 6.5.0-1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 13.1.1 20230429"
 CONFIG_CC_IS_GCC=y
@@ -183,6 +183,7 @@ CONFIG_RCU_NOCB_CPU=y
 # CONFIG_RCU_NOCB_CPU_CB_BOOST is not set
 # CONFIG_TASKS_TRACE_RCU_READ_MB is not set
 CONFIG_RCU_LAZY=y
+# CONFIG_RCU_DOUBLE_CHECK_CB_TIME is not set
 # end of RCU Subsystem
 
 CONFIG_IKCONFIG=y
@@ -298,6 +299,7 @@ CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_ARCH_HAS_MEMBARRIER_SYNC_CORE=y
 CONFIG_KCMP=y
 CONFIG_RSEQ=y
+CONFIG_CACHESTAT_SYSCALL=y
 # CONFIG_EMBEDDED is not set
 CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_GUEST_PERF_EVENTS=y
@@ -347,7 +349,6 @@ CONFIG_CC_HAS_SANE_STACKPROTECTOR=y
 # Processor type and features
 #
 CONFIG_SMP=y
-CONFIG_X86_FEATURE_NAMES=y
 CONFIG_X86_X2APIC=y
 CONFIG_X86_MPPARSE=y
 # CONFIG_GOLDFISH is not set
@@ -514,8 +515,6 @@ CONFIG_RANDOMIZE_MEMORY=y
 CONFIG_RANDOMIZE_MEMORY_PHYSICAL_PADDING=0xa
 CONFIG_ADDRESS_MASKING=y
 CONFIG_HOTPLUG_CPU=y
-# CONFIG_BOOTPARAM_HOTPLUG_CPU0 is not set
-# CONFIG_DEBUG_HOTPLUG_CPU0 is not set
 # CONFIG_COMPAT_VDSO is not set
 CONFIG_LEGACY_VSYSCALL_XONLY=y
 # CONFIG_LEGACY_VSYSCALL_NONE is not set
@@ -674,6 +673,7 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_X86_INTEL_PSTATE=y
 CONFIG_X86_PCC_CPUFREQ=m
 CONFIG_X86_AMD_PSTATE=y
+CONFIG_X86_AMD_PSTATE_DEFAULT_MODE=3
 CONFIG_X86_AMD_PSTATE_UT=m
 CONFIG_X86_ACPI_CPUFREQ=m
 CONFIG_X86_ACPI_CPUFREQ_CPB=y
@@ -765,6 +765,11 @@ CONFIG_AS_GFNI=y
 CONFIG_CRASH_CORE=y
 CONFIG_KEXEC_CORE=y
 CONFIG_HOTPLUG_SMT=y
+CONFIG_HOTPLUG_CORE_SYNC=y
+CONFIG_HOTPLUG_CORE_SYNC_DEAD=y
+CONFIG_HOTPLUG_CORE_SYNC_FULL=y
+CONFIG_HOTPLUG_SPLIT_STARTUP=y
+CONFIG_HOTPLUG_PARALLEL=y
 CONFIG_GENERIC_ENTRY=y
 CONFIG_KPROBES=y
 CONFIG_JUMP_LABEL=y
@@ -794,6 +799,7 @@ CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_ARCH_HAS_FORTIFY_SOURCE=y
 CONFIG_ARCH_HAS_SET_MEMORY=y
 CONFIG_ARCH_HAS_SET_DIRECT_MAP=y
+CONFIG_ARCH_HAS_CPU_FINALIZE_INIT=y
 CONFIG_HAVE_ARCH_THREAD_STRUCT_WHITELIST=y
 CONFIG_ARCH_WANTS_DYNAMIC_TASK_STRUCT=y
 CONFIG_ARCH_WANTS_NO_INSTR=y
@@ -1047,6 +1053,7 @@ CONFIG_ZPOOL=y
 CONFIG_SWAP=y
 CONFIG_ZSWAP=y
 CONFIG_ZSWAP_DEFAULT_ON=y
+# CONFIG_ZSWAP_EXCLUSIVE_LOADS_DEFAULT_ON is not set
 # CONFIG_ZSWAP_COMPRESSOR_DEFAULT_DEFLATE is not set
 # CONFIG_ZSWAP_COMPRESSOR_DEFAULT_LZO is not set
 # CONFIG_ZSWAP_COMPRESSOR_DEFAULT_842 is not set
@@ -1067,7 +1074,7 @@ CONFIG_ZSMALLOC_CHAIN_SIZE=8
 #
 # SLAB allocator options
 #
-# CONFIG_SLAB is not set
+# CONFIG_SLAB_DEPRECATED is not set
 CONFIG_SLUB=y
 CONFIG_SLAB_MERGE_DEFAULT=y
 CONFIG_SLAB_FREELIST_RANDOM=y
@@ -1163,6 +1170,7 @@ CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
 # CONFIG_LRU_GEN_STATS is not set
 CONFIG_ARCH_SUPPORTS_PER_VMA_LOCK=y
+CONFIG_PER_VMA_LOCK=y
 CONFIG_LOCK_MM_AND_FIND_VMA=y
 
 #
@@ -2228,6 +2236,7 @@ CONFIG_CXL_PORT=m
 CONFIG_CXL_SUSPEND=y
 CONFIG_CXL_REGION=y
 # CONFIG_CXL_REGION_INVALIDATION_TEST is not set
+CONFIG_CXL_PMU=m
 CONFIG_PCCARD=m
 CONFIG_PCMCIA=m
 CONFIG_PCMCIA_LOAD_CIS=y
@@ -2366,6 +2375,7 @@ CONFIG_EFI_EARLYCON=y
 CONFIG_EFI_CUSTOM_SSDT_OVERLAYS=y
 # CONFIG_EFI_DISABLE_RUNTIME is not set
 CONFIG_EFI_COCO_SECRET=y
+CONFIG_UNACCEPTED_MEMORY=y
 CONFIG_EFI_EMBEDDED_FIRMWARE=y
 # end of EFI (Extensible Firmware Interface) Support
 
@@ -2661,6 +2671,7 @@ CONFIG_INTEL_MEI_TXE=m
 CONFIG_INTEL_MEI_GSC=m
 CONFIG_INTEL_MEI_HDCP=m
 CONFIG_INTEL_MEI_PXP=m
+# CONFIG_INTEL_MEI_GSC_PROXY is not set
 CONFIG_VMWARE_VMCI=m
 CONFIG_GENWQE=m
 CONFIG_GENWQE_PLATFORM_ERROR_RECOVERY=0
@@ -3217,6 +3228,7 @@ CONFIG_THUNDER_NIC_VF=m
 CONFIG_THUNDER_NIC_BGX=m
 CONFIG_THUNDER_NIC_RGX=m
 CONFIG_CAVIUM_PTP=m
+CONFIG_LIQUIDIO_CORE=m
 CONFIG_LIQUIDIO=m
 CONFIG_LIQUIDIO_VF=m
 CONFIG_NET_VENDOR_CHELSIO=y
@@ -3621,6 +3633,7 @@ CONFIG_CAN_8DEV_USB=m
 CONFIG_CAN_EMS_USB=m
 CONFIG_CAN_ESD_USB=m
 CONFIG_CAN_ETAS_ES58X=m
+# CONFIG_CAN_F81604 is not set
 CONFIG_CAN_GS_USB=m
 CONFIG_CAN_KVASER_USB=m
 CONFIG_CAN_MCBA_USB=m
@@ -3649,6 +3662,7 @@ CONFIG_MDIO_GPIO=m
 CONFIG_MDIO_I2C=m
 CONFIG_MDIO_MVUSB=m
 CONFIG_MDIO_MSCC_MIIM=m
+CONFIG_MDIO_REGMAP=m
 CONFIG_MDIO_THUNDER=m
 
 #
@@ -3661,7 +3675,6 @@ CONFIG_MDIO_THUNDER=m
 CONFIG_PCS_XPCS=m
 CONFIG_PCS_LYNX=m
 CONFIG_PCS_MTK_LYNXI=m
-CONFIG_PCS_ALTERA_TSE=m
 # end of PCS device drivers
 
 CONFIG_PLIP=m
@@ -3673,6 +3686,11 @@ CONFIG_PPP_MPPE=m
 CONFIG_PPP_MULTILINK=y
 CONFIG_PPPOATM=m
 CONFIG_PPPOE=m
+# CONFIG_PPPOE_HASH_BITS_1 is not set
+# CONFIG_PPPOE_HASH_BITS_2 is not set
+CONFIG_PPPOE_HASH_BITS_4=y
+# CONFIG_PPPOE_HASH_BITS_8 is not set
+CONFIG_PPPOE_HASH_BITS=4
 CONFIG_PPTP=m
 CONFIG_PPPOL2TP=m
 CONFIG_PPP_ASYNC=m
@@ -4021,6 +4039,7 @@ CONFIG_RTW88_8822CE=m
 CONFIG_RTW88_8822CS=m
 CONFIG_RTW88_8822CU=m
 CONFIG_RTW88_8723DE=m
+# CONFIG_RTW88_8723DS is not set
 CONFIG_RTW88_8723DU=m
 CONFIG_RTW88_8821CE=m
 CONFIG_RTW88_8821CS=m
@@ -4033,6 +4052,7 @@ CONFIG_RTW89_PCI=m
 CONFIG_RTW89_8852A=m
 CONFIG_RTW89_8852B=m
 CONFIG_RTW89_8852C=m
+# CONFIG_RTW89_8851BE is not set
 CONFIG_RTW89_8852AE=m
 CONFIG_RTW89_8852BE=m
 CONFIG_RTW89_8852CE=m
@@ -4313,7 +4333,6 @@ CONFIG_TOUCHSCREEN_MTOUCH=m
 CONFIG_TOUCHSCREEN_NOVATEK_NVT_TS=m
 CONFIG_TOUCHSCREEN_IMAGIS=m
 CONFIG_TOUCHSCREEN_INEXIO=m
-CONFIG_TOUCHSCREEN_MK712=m
 CONFIG_TOUCHSCREEN_PENMOUNT=m
 CONFIG_TOUCHSCREEN_EDT_FT5X06=m
 CONFIG_TOUCHSCREEN_TOUCHRIGHT=m
@@ -4896,13 +4915,13 @@ CONFIG_GPIO_MB86S7X=m
 CONFIG_GPIO_MENZ127=m
 CONFIG_GPIO_SIOX=m
 CONFIG_GPIO_TANGIER=m
-CONFIG_GPIO_VX855=m
 CONFIG_GPIO_AMD_FCH=m
 # end of Memory mapped GPIO drivers
 
 #
 # Port-mapped I/O GPIO drivers
 #
+CONFIG_GPIO_VX855=m
 CONFIG_GPIO_F7188X=m
 CONFIG_GPIO_IT87=m
 CONFIG_GPIO_SCH=m
@@ -5105,6 +5124,7 @@ CONFIG_CHARGER_TPS65090=m
 CONFIG_BATTERY_GAUGE_LTC2941=m
 CONFIG_BATTERY_GOLDFISH=m
 CONFIG_BATTERY_RT5033=m
+# CONFIG_CHARGER_RT5033 is not set
 CONFIG_CHARGER_RT9455=m
 CONFIG_CHARGER_RT9467=m
 CONFIG_CHARGER_RT9471=m
@@ -5203,6 +5223,7 @@ CONFIG_SENSORS_MAX197=m
 CONFIG_SENSORS_MAX31722=m
 CONFIG_SENSORS_MAX31730=m
 CONFIG_SENSORS_MAX31760=m
+# CONFIG_MAX31827 is not set
 CONFIG_SENSORS_MAX6620=m
 CONFIG_SENSORS_MAX6621=m
 CONFIG_SENSORS_MAX6639=m
@@ -5370,6 +5391,7 @@ CONFIG_SENSORS_ACPI_POWER=m
 CONFIG_SENSORS_ATK0110=m
 CONFIG_SENSORS_ASUS_WMI=m
 CONFIG_SENSORS_ASUS_EC=m
+# CONFIG_SENSORS_HP_WMI is not set
 CONFIG_THERMAL=y
 CONFIG_THERMAL_NETLINK=y
 # CONFIG_THERMAL_STATISTICS is not set
@@ -5381,6 +5403,7 @@ CONFIG_THERMAL_DEFAULT_GOV_STEP_WISE=y
 # CONFIG_THERMAL_DEFAULT_GOV_FAIR_SHARE is not set
 # CONFIG_THERMAL_DEFAULT_GOV_USER_SPACE is not set
 # CONFIG_THERMAL_DEFAULT_GOV_POWER_ALLOCATOR is not set
+# CONFIG_THERMAL_DEFAULT_GOV_BANG_BANG is not set
 CONFIG_THERMAL_GOV_FAIR_SHARE=y
 CONFIG_THERMAL_GOV_STEP_WISE=y
 CONFIG_THERMAL_GOV_BANG_BANG=y
@@ -5588,6 +5611,7 @@ CONFIG_MFD_88PM800=m
 CONFIG_MFD_88PM805=m
 CONFIG_MFD_88PM860X=y
 CONFIG_MFD_MAX14577=m
+# CONFIG_MFD_MAX77541 is not set
 CONFIG_MFD_MAX77693=m
 CONFIG_MFD_MAX77843=y
 CONFIG_MFD_MAX8907=m
@@ -5633,6 +5657,8 @@ CONFIG_MFD_TPS65910=y
 CONFIG_MFD_TPS65912=m
 CONFIG_MFD_TPS65912_I2C=m
 CONFIG_MFD_TPS65912_SPI=m
+# CONFIG_MFD_TPS6594_I2C is not set
+# CONFIG_MFD_TPS6594_SPI is not set
 CONFIG_TWL4030_CORE=y
 CONFIG_MFD_TWL4030_AUDIO=y
 CONFIG_TWL6040_CORE=y
@@ -5736,6 +5762,7 @@ CONFIG_REGULATOR_PV88060=m
 CONFIG_REGULATOR_PV88080=m
 CONFIG_REGULATOR_PV88090=m
 CONFIG_REGULATOR_PWM=m
+# CONFIG_REGULATOR_RAA215300 is not set
 CONFIG_REGULATOR_RC5T583=m
 CONFIG_REGULATOR_RT4801=m
 CONFIG_REGULATOR_RT4803=m
@@ -5967,7 +5994,6 @@ CONFIG_VIDEO_PVRUSB2=m
 CONFIG_VIDEO_PVRUSB2_SYSFS=y
 CONFIG_VIDEO_PVRUSB2_DVB=y
 # CONFIG_VIDEO_PVRUSB2_DEBUGIFC is not set
-CONFIG_VIDEO_STK1160_COMMON=m
 CONFIG_VIDEO_STK1160=m
 
 #
@@ -6321,6 +6347,7 @@ CONFIG_VIDEO_MT9V011=m
 CONFIG_VIDEO_MT9V032=m
 CONFIG_VIDEO_MT9V111=m
 CONFIG_VIDEO_OG01A1B=m
+# CONFIG_VIDEO_OV01A10 is not set
 CONFIG_VIDEO_OV02A10=m
 CONFIG_VIDEO_OV08D10=m
 CONFIG_VIDEO_OV08X40=m
@@ -6801,6 +6828,9 @@ CONFIG_FB_SYS_IMAGEBLIT=y
 # CONFIG_FB_FOREIGN_ENDIAN is not set
 CONFIG_FB_SYS_FOPS=y
 CONFIG_FB_DEFERRED_IO=y
+CONFIG_FB_IO_HELPERS=y
+CONFIG_FB_SYS_HELPERS=y
+CONFIG_FB_SYS_HELPERS_DEFERRED=y
 # CONFIG_FB_MODE_HELPERS is not set
 # CONFIG_FB_TILEBLITTING is not set
 
@@ -6974,6 +7004,7 @@ CONFIG_SND_SEQ_MIDI_EVENT=m
 CONFIG_SND_SEQ_MIDI=m
 CONFIG_SND_SEQ_MIDI_EMUL=m
 CONFIG_SND_SEQ_VIRMIDI=m
+# CONFIG_SND_SEQ_UMP is not set
 CONFIG_SND_MPU401_UART=m
 CONFIG_SND_OPL3_LIB=m
 CONFIG_SND_OPL3_LIB_SEQ=m
@@ -6983,6 +7014,7 @@ CONFIG_SND_DRIVERS=y
 # CONFIG_SND_PCSP is not set
 CONFIG_SND_DUMMY=m
 CONFIG_SND_ALOOP=m
+# CONFIG_SND_PCMTEST is not set
 CONFIG_SND_VIRMIDI=m
 CONFIG_SND_MTPAV=m
 CONFIG_SND_MTS64=m
@@ -7113,6 +7145,7 @@ CONFIG_SND_INTEL_SOUNDWIRE_ACPI=m
 CONFIG_SND_SPI=y
 CONFIG_SND_USB=y
 CONFIG_SND_USB_AUDIO=m
+# CONFIG_SND_USB_AUDIO_MIDI_V2 is not set
 CONFIG_SND_USB_AUDIO_USE_MEDIA_CONTROLLER=y
 CONFIG_SND_USB_UA101=m
 CONFIG_SND_USB_USX2Y=m
@@ -7200,6 +7233,7 @@ CONFIG_SND_SOC_FSL_RPMSG=m
 # CONFIG_SND_SOC_IMX_AUDMUX is not set
 # end of SoC Audio for Freescale CPUs
 
+# CONFIG_SND_SOC_CHV3_I2S is not set
 CONFIG_SND_I2S_HI6210_I2S=m
 CONFIG_SND_SOC_IMG=y
 CONFIG_SND_SOC_IMG_I2S_IN=m
@@ -7398,6 +7432,7 @@ CONFIG_SND_SOC_AW88395_LIB=m
 CONFIG_SND_SOC_AW88395=m
 CONFIG_SND_SOC_BD28623=m
 # CONFIG_SND_SOC_BT_SCO is not set
+# CONFIG_SND_SOC_CHV3_CODEC is not set
 CONFIG_SND_SOC_CROS_EC_CODEC=m
 CONFIG_SND_SOC_CS35L32=m
 CONFIG_SND_SOC_CS35L33=m
@@ -7467,6 +7502,7 @@ CONFIG_SND_SOC_MAX98363=m
 CONFIG_SND_SOC_MAX98373=m
 CONFIG_SND_SOC_MAX98373_I2C=m
 CONFIG_SND_SOC_MAX98373_SDW=m
+# CONFIG_SND_SOC_MAX98388 is not set
 CONFIG_SND_SOC_MAX98390=m
 CONFIG_SND_SOC_MAX98396=m
 CONFIG_SND_SOC_MAX9860=m
@@ -7529,6 +7565,7 @@ CONFIG_SND_SOC_RT711_SDW=m
 CONFIG_SND_SOC_RT711_SDCA_SDW=m
 CONFIG_SND_SOC_RT712_SDCA_SDW=m
 CONFIG_SND_SOC_RT712_SDCA_DMIC_SDW=m
+# CONFIG_SND_SOC_RT722_SDCA_SDW is not set
 CONFIG_SND_SOC_RT715=m
 CONFIG_SND_SOC_RT715_SDW=m
 CONFIG_SND_SOC_RT715_SDCA_SDW=m
@@ -7559,6 +7596,7 @@ CONFIG_SND_SOC_TAS2562=m
 CONFIG_SND_SOC_TAS2764=m
 CONFIG_SND_SOC_TAS2770=m
 CONFIG_SND_SOC_TAS2780=m
+# CONFIG_SND_SOC_TAS2781_I2C is not set
 CONFIG_SND_SOC_TAS5086=m
 CONFIG_SND_SOC_TAS571X=m
 CONFIG_SND_SOC_TAS5720=m
@@ -7619,6 +7657,7 @@ CONFIG_SND_SOC_WM8978=m
 CONFIG_SND_SOC_WM8985=m
 CONFIG_SND_SOC_WSA881X=m
 CONFIG_SND_SOC_WSA883X=m
+# CONFIG_SND_SOC_WSA884X is not set
 CONFIG_SND_SOC_ZL38060=m
 CONFIG_SND_SOC_MAX9759=m
 CONFIG_SND_SOC_MT6351=m
@@ -7732,6 +7771,7 @@ CONFIG_HID_NINTENDO=m
 CONFIG_NINTENDO_FF=y
 CONFIG_HID_NTI=m
 CONFIG_HID_NTRIG=m
+# CONFIG_HID_NVIDIA_SHIELD is not set
 CONFIG_HID_ORTEK=m
 CONFIG_HID_PANTHERLORD=m
 CONFIG_PANTHERLORD_FF=y
@@ -8121,6 +8161,7 @@ CONFIG_USB_NET2280=m
 CONFIG_USB_GOKU=m
 CONFIG_USB_EG20T=m
 CONFIG_USB_MAX3420_UDC=m
+# CONFIG_USB_CDNS2_UDC is not set
 CONFIG_USB_DUMMY_HCD=m
 # end of USB Peripheral Controller
 
@@ -8231,6 +8272,7 @@ CONFIG_TYPEC_MUX_FSA4480=m
 CONFIG_TYPEC_MUX_GPIO_SBU=m
 CONFIG_TYPEC_MUX_PI3USB30532=m
 CONFIG_TYPEC_MUX_INTEL_PMC=m
+# CONFIG_TYPEC_MUX_NB7VPQ904M is not set
 # end of USB Type-C Multiplexer/DeMultiplexer Switch support
 
 #
@@ -8315,6 +8357,8 @@ CONFIG_LEDS_BRIGHTNESS_HW_CHANGED=y
 #
 CONFIG_LEDS_88PM860X=m
 CONFIG_LEDS_APU=m
+# CONFIG_LEDS_AW200XX is not set
+# CONFIG_LEDS_CHT_WCOVE is not set
 CONFIG_LEDS_LM3530=m
 CONFIG_LEDS_LM3532=m
 CONFIG_LEDS_LM3533=m
@@ -8406,6 +8450,8 @@ CONFIG_LEDS_TRIGGER_TTY=m
 # Simple LED drivers
 #
 CONFIG_LEDS_SIEMENS_SIMATIC_IPC=m
+CONFIG_LEDS_SIEMENS_SIMATIC_IPC_APOLLOLAKE=m
+CONFIG_LEDS_SIEMENS_SIMATIC_IPC_F7188X=m
 CONFIG_ACCESSIBILITY=y
 CONFIG_A11Y_BRAILLE_CONSOLE=y
 
@@ -8702,6 +8748,10 @@ CONFIG_VFIO_CONTAINER=y
 CONFIG_VFIO_IOMMU_TYPE1=m
 # CONFIG_VFIO_NOIOMMU is not set
 CONFIG_VFIO_VIRQFD=y
+
+#
+# VFIO support for PCI devices
+#
 CONFIG_VFIO_PCI_CORE=m
 CONFIG_VFIO_PCI_MMAP=y
 CONFIG_VFIO_PCI_INTX=y
@@ -8709,6 +8759,8 @@ CONFIG_VFIO_PCI=m
 CONFIG_VFIO_PCI_VGA=y
 CONFIG_VFIO_PCI_IGD=y
 CONFIG_MLX5_VFIO_PCI=m
+# end of VFIO support for PCI devices
+
 CONFIG_VFIO_MDEV=m
 CONFIG_IRQ_BYPASS_MANAGER=m
 CONFIG_VIRT_DRIVERS=y
@@ -8746,6 +8798,7 @@ CONFIG_MLX5_VDPA_NET=m
 CONFIG_VP_VDPA=m
 CONFIG_ALIBABA_ENI_VDPA=m
 CONFIG_SNET_VDPA=m
+# CONFIG_PDS_VDPA is not set
 CONFIG_VHOST_IOTLB=m
 CONFIG_VHOST_RING=m
 CONFIG_VHOST_TASK=y
@@ -8945,11 +8998,12 @@ CONFIG_MXM_WMI=m
 CONFIG_NVIDIA_WMI_EC_BACKLIGHT=m
 CONFIG_XIAOMI_WMI=m
 CONFIG_GIGABYTE_WMI=m
-CONFIG_YOGABOOK_WMI=m
+# CONFIG_YOGABOOK is not set
 CONFIG_ACERHDF=m
 CONFIG_ACER_WIRELESS=m
 CONFIG_ACER_WMI=m
 CONFIG_AMD_PMF=m
+# CONFIG_AMD_PMF_DEBUG is not set
 CONFIG_AMD_PMC=m
 CONFIG_AMD_HSMP=m
 CONFIG_ADV_SWBUTTON=m
@@ -9025,6 +9079,7 @@ CONFIG_INTEL_WMI_THUNDERBOLT=m
 #
 # Intel Uncore Frequency Control
 #
+CONFIG_INTEL_UNCORE_FREQ_CONTROL_TPMI=m
 CONFIG_INTEL_UNCORE_FREQ_CONTROL=m
 # end of Intel Uncore Frequency Control
 
@@ -9702,6 +9757,7 @@ CONFIG_ISL29125=m
 CONFIG_HID_SENSOR_ALS=m
 CONFIG_HID_SENSOR_PROX=m
 CONFIG_JSA1212=m
+# CONFIG_ROHM_BU27008 is not set
 CONFIG_ROHM_BU27034=m
 CONFIG_RPR0521=m
 CONFIG_SENSORS_LM3533=m
@@ -9712,6 +9768,7 @@ CONFIG_MAX44000=m
 CONFIG_MAX44009=m
 CONFIG_NOA1305=m
 CONFIG_OPT3001=m
+# CONFIG_OPT4001 is not set
 CONFIG_PA12203001=m
 CONFIG_SI1133=m
 CONFIG_SI1145=m
@@ -9803,6 +9860,7 @@ CONFIG_MCP4131=m
 CONFIG_MCP4531=m
 CONFIG_MCP41010=m
 CONFIG_TPL0102=m
+# CONFIG_X9250 is not set
 # end of Digital potentiometers
 
 #
@@ -9828,6 +9886,7 @@ CONFIG_MPL115=m
 CONFIG_MPL115_I2C=m
 CONFIG_MPL115_SPI=m
 CONFIG_MPL3115=m
+# CONFIG_MPRLS0025PA is not set
 CONFIG_MS5611=m
 CONFIG_MS5611_I2C=m
 CONFIG_MS5611_SPI=m
@@ -9961,6 +10020,7 @@ CONFIG_PHY_INTEL_LGM_EMMC=m
 CONFIG_POWERCAP=y
 CONFIG_INTEL_RAPL_CORE=m
 CONFIG_INTEL_RAPL=m
+# CONFIG_INTEL_RAPL_TPMI is not set
 CONFIG_IDLE_INJECT=y
 CONFIG_MCB=m
 CONFIG_MCB_PCI=m
@@ -10524,7 +10584,6 @@ CONFIG_SECURITY_NETWORK_XFRM=y
 CONFIG_SECURITY_PATH=y
 # CONFIG_INTEL_TXT is not set
 CONFIG_LSM_MMAP_MIN_ADDR=65536
-CONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_FORTIFY_SOURCE=y
 # CONFIG_STATIC_USERMODEHELPER is not set
@@ -10623,6 +10682,7 @@ CONFIG_CRYPTO_ALGAPI=y
 CONFIG_CRYPTO_ALGAPI2=y
 CONFIG_CRYPTO_AEAD=m
 CONFIG_CRYPTO_AEAD2=y
+CONFIG_CRYPTO_SIG2=y
 CONFIG_CRYPTO_SKCIPHER=y
 CONFIG_CRYPTO_SKCIPHER2=y
 CONFIG_CRYPTO_HASH=y
@@ -10640,7 +10700,7 @@ CONFIG_CRYPTO_MANAGER2=y
 CONFIG_CRYPTO_USER=m
 CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=y
 CONFIG_CRYPTO_NULL=m
-CONFIG_CRYPTO_NULL2=y
+CONFIG_CRYPTO_NULL2=m
 CONFIG_CRYPTO_PCRYPT=m
 CONFIG_CRYPTO_CRYPTD=m
 CONFIG_CRYPTO_AUTHENC=m
@@ -10711,6 +10771,7 @@ CONFIG_CRYPTO_AEGIS128=m
 CONFIG_CRYPTO_CHACHA20POLY1305=m
 CONFIG_CRYPTO_CCM=m
 CONFIG_CRYPTO_GCM=m
+CONFIG_CRYPTO_GENIV=m
 CONFIG_CRYPTO_SEQIV=m
 CONFIG_CRYPTO_ECHAINIV=m
 CONFIG_CRYPTO_ESSIV=m
@@ -10732,7 +10793,7 @@ CONFIG_CRYPTO_RMD160=m
 CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA512=y
-CONFIG_CRYPTO_SHA3=m
+CONFIG_CRYPTO_SHA3=y
 CONFIG_CRYPTO_SM3=m
 CONFIG_CRYPTO_SM3_GENERIC=m
 CONFIG_CRYPTO_STREEBOG=m
@@ -10772,6 +10833,7 @@ CONFIG_CRYPTO_DRBG_HASH=y
 CONFIG_CRYPTO_DRBG_CTR=y
 CONFIG_CRYPTO_DRBG=y
 CONFIG_CRYPTO_JITTERENTROPY=y
+# CONFIG_CRYPTO_JITTERENTROPY_TESTINTERFACE is not set
 CONFIG_CRYPTO_KDF800108_CTR=y
 # end of Random number generation
 
@@ -10997,6 +11059,7 @@ CONFIG_HAS_IOPORT=y
 CONFIG_HAS_IOPORT_MAP=y
 CONFIG_HAS_DMA=y
 CONFIG_DMA_OPS=y
+CONFIG_NEED_SG_DMA_FLAGS=y
 CONFIG_NEED_SG_DMA_LENGTH=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_ARCH_DMA_ADDR_T_64BIT=y
@@ -11167,6 +11230,7 @@ CONFIG_PTDUMP_CORE=y
 # CONFIG_PTDUMP_DEBUGFS is not set
 CONFIG_HAVE_DEBUG_KMEMLEAK=y
 # CONFIG_DEBUG_KMEMLEAK is not set
+# CONFIG_PER_VMA_LOCK_STATS is not set
 # CONFIG_DEBUG_OBJECTS is not set
 CONFIG_SHRINKER_DEBUG=y
 # CONFIG_DEBUG_STACK_USAGE is not set
@@ -11205,14 +11269,20 @@ CONFIG_PANIC_TIMEOUT=0
 CONFIG_LOCKUP_DETECTOR=y
 CONFIG_SOFTLOCKUP_DETECTOR=y
 # CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC is not set
-CONFIG_HARDLOCKUP_DETECTOR_PERF=y
-CONFIG_HARDLOCKUP_CHECK_TIMESTAMP=y
+CONFIG_HAVE_HARDLOCKUP_DETECTOR_BUDDY=y
 CONFIG_HARDLOCKUP_DETECTOR=y
+# CONFIG_HARDLOCKUP_DETECTOR_PREFER_BUDDY is not set
+CONFIG_HARDLOCKUP_DETECTOR_PERF=y
+# CONFIG_HARDLOCKUP_DETECTOR_BUDDY is not set
+# CONFIG_HARDLOCKUP_DETECTOR_ARCH is not set
+CONFIG_HARDLOCKUP_DETECTOR_COUNTS_HRTIMER=y
+CONFIG_HARDLOCKUP_CHECK_TIMESTAMP=y
 # CONFIG_BOOTPARAM_HARDLOCKUP_PANIC is not set
 CONFIG_DETECT_HUNG_TASK=y
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
 # CONFIG_BOOTPARAM_HUNG_TASK_PANIC is not set
 # CONFIG_WQ_WATCHDOG is not set
+# CONFIG_WQ_CPU_INTENSIVE_REPORT is not set
 # CONFIG_TEST_LOCKUP is not set
 # end of Debug Oops, Lockups and Hangs
 
@@ -11289,6 +11359,7 @@ CONFIG_HAVE_RETHOOK=y
 CONFIG_RETHOOK=y
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
+CONFIG_HAVE_FUNCTION_GRAPH_RETVAL=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_DYNAMIC_FTRACE_WITH_REGS=y
 CONFIG_HAVE_DYNAMIC_FTRACE_WITH_DIRECT_CALLS=y
@@ -11314,6 +11385,7 @@ CONFIG_FTRACE=y
 CONFIG_BOOTTIME_TRACING=y
 CONFIG_FUNCTION_TRACER=y
 CONFIG_FUNCTION_GRAPH_TRACER=y
+# CONFIG_FUNCTION_GRAPH_RETVAL is not set
 CONFIG_DYNAMIC_FTRACE=y
 CONFIG_DYNAMIC_FTRACE_WITH_REGS=y
 CONFIG_DYNAMIC_FTRACE_WITH_DIRECT_CALLS=y
@@ -11334,6 +11406,8 @@ CONFIG_TRACER_SNAPSHOT=y
 CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
 CONFIG_BLK_DEV_IO_TRACE=y
+CONFIG_FPROBE_EVENTS=y
+CONFIG_PROBE_EVENTS_BTF_ARGS=y
 CONFIG_KPROBE_EVENTS=y
 # CONFIG_KPROBE_EVENTS_ON_NOTRACE is not set
 CONFIG_UPROBE_EVENTS=y
